--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/CaixeiroViajante.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jgraph-5.13.0.0.jar=lib\\jgraph-5.13.0.0.jar
+file.reference.jgrapht-core-1.0.1.jar=lib\\jgrapht-core-1.0.1.jar
+file.reference.jgrapht-ext-1.0.1-uber.jar=lib\\jgrapht-ext-1.0.1-uber.jar
+file.reference.jgrapht-ext-1.0.1.jar=lib\\jgrapht-ext-1.0.1.jar
+file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jgraph-5.13.0.0.jar}:\
+    ${file.reference.jgrapht-core-1.0.1.jar}:\
+    ${file.reference.jgrapht-ext-1.0.1-uber.jar}:\
+    ${file.reference.jgrapht-ext-1.0.1.jar}:\
+    ${file.reference.weblaf-complete-1.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
