--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,15 +31,13 @@ file.reference.jgraph-5.13.0.0.jar=lib\\jgraph-5.13.0.0.jar
 file.reference.jgrapht-core-1.0.1.jar=lib\\jgrapht-core-1.0.1.jar
 file.reference.jgrapht-ext-1.0.1-uber.jar=lib\\jgrapht-ext-1.0.1-uber.jar
 file.reference.jgrapht-ext-1.0.1.jar=lib\\jgrapht-ext-1.0.1.jar
-file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jgraph-5.13.0.0.jar}:\
     ${file.reference.jgrapht-core-1.0.1.jar}:\
     ${file.reference.jgrapht-ext-1.0.1-uber.jar}:\
-    ${file.reference.jgrapht-ext-1.0.1.jar}:\
-    ${file.reference.weblaf-complete-1.29.jar}
+    ${file.reference.jgrapht-ext-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=caixeiroviajante.CaixeiroViajante
+main.class=caixeiroviajante.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
