--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,17 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/CaixeiroViajante.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jgraph-5.13.0.0.jar=lib\\jgraph-5.13.0.0.jar
-file.reference.jgrapht-core-1.0.1.jar=lib\\jgrapht-core-1.0.1.jar
-file.reference.jgrapht-ext-1.0.1-uber.jar=lib\\jgrapht-ext-1.0.1-uber.jar
-file.reference.jgrapht-ext-1.0.1.jar=lib\\jgrapht-ext-1.0.1.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.jgraph-5.13.0.0.jar}:\
-    ${file.reference.jgrapht-core-1.0.1.jar}:\
-    ${file.reference.jgrapht-ext-1.0.1-uber.jar}:\
-    ${file.reference.jgrapht-ext-1.0.1.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=caixeiroviajante.Principal
+main.class=caixeiroviajante.view.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
